<resources>
    <string name="app_name">Phone Number Verification</string>
    <string name="otp"><![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
    <string name="otp1"><![CDATA[<font color="#a3a3a3">Enter OTP send to </font> <font color="#000000">+91-9876-564-656</font>]]></string>
    <string name="otp_verification">OTP Verification</string>
    <string name="todo">TODO</string>
    <string name="verify">VERIFY</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="hash">#</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_description">Add a new location</string>
    <string name="fab_edit_description" > Edit Journey</string>
    <string name="fab_memories_description" > Journey Memories</string>
    <string name="fab_create_description" > Create Journey</string>
    <string name="google_map_view" > google map view</string>
</resources>