<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00897B">

    <!-- ImageView for displaying image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imageremovebgpreview" />

    <!-- LinearLayout for buttons and phone number input -->
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <!-- TextView for instructions -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.08"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"> <!-- Adjust margin to move up -->

            <EditText
                android:id="@+id/login_mobile_number"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_rounded_corner"
                android:elevation="5dp"
                android:hint="@string/mobile"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="16dp"
                android:textSize="18sp"
            />


        </LinearLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/button_login"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button1_intro"
            android:text="@string/login"
            android:textColor="#f2a02b"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:elevation="4dp" />

        <!-- SignUp Button -->
        <Button
            android:id="@+id/button_signup"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_intro"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:elevation="4dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
