<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <!-- Container for FABs -->
    <LinearLayout
        android:id="@+id/fab_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"> <!-- Khoảng cách từ bottom navigation -->

        <!-- FAB for Memories -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_memories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_action_memories"
            android:tint="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            android:contentDescription="@string/fab_memories_description" />

        <!-- FAB for Edit -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_action_edit"
            android:tint="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            android:contentDescription="@string/fab_edit_description" />

        <!-- FAB for Create -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_action_create"
            android:tint="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            android:contentDescription="@string/fab_create_description" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
